# astronomo

./: .bumpversion.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: release-pypi.yml
docs/: changelog.md  index.md  installation.md  quickstart.md
docs/explanation/: architecture.md  finger-protocol.md  gemini-protocol.md  gopher-protocol.md  index.md
docs/how-to/: bookmarks.md  certificates.md  configure.md  feeds.md  index.md  known-hosts.md  navigation.md
docs/reference/: configuration.md  index.md  keybindings.md
docs/reference/api/: bookmarks.md  config.md  history.md  identities.md  index.md  parser.md
docs/tutorials/: customizing-astronomo.md  first-session.md  index.md
src/astronomo/: __init__.py  astronomo.py  astronomo_app.py  astronomo_app.tcss  bookmarks.py  config.py  feed_fetcher.py  feeds.py  history.py  identities.py  opml.py  parser.py  response_handler.py
src/astronomo/formatters/: __init__.py  nex.py  spartan.py
src/astronomo/screens/: __init__.py  feeds.py  settings.py
src/astronomo/widgets/: __init__.py  add_bookmark_modal.py  (+12 more)
tests/: conftest.py  test_astronomo_app.py  test_bookmarks.py  test_color_picker.py  test_config.py  test_emoji_utils.py  test_error_handling.py  test_feed_fetcher.py  test_feeds.py  test_formatters.py  test_get_url.py  test_history.py  test_identities.py  test_link_scrolling.py  test_modals.py  test_opml.py  test_parser.py  test_response_handler.py  test_session_identity_modal.py  test_settings.py  test_syntax.py  test_url_resolution.py
(+23 files in other folders)
